fixed horizontal scroll and made scrolling more pleasant on mobile devices

--- a/src/styles/global_styles.scss
+++ b/src/styles/global_styles.scss
@@ -28,7 +28,10 @@
 // 
 // app
 // 
-
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
 .hidden {
     opacity: 0;
 }
